--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
   </head>
   <body>
    <div class = "links">
-                    <a href = "#about">About me</a> 
+                    <a href = "#about">About me again</a> 
                     <a href = "#services">Services</a> 
                     <a href = "#projects">Projects</a> 
                     <a href = "#contact">Contact</a> 
