Changing images and adding buttons for github and urls for pictures.

--- a/public/index.html
+++ b/public/index.html
@@ -104,51 +104,63 @@
 
                     </div>
 
-<div id ="projects">Projects</div>
-  <div class="slider project-container">
+                        <div id ="projects">Projects</div>
+                          <div class="slider project-container">
 
-    <div>
-      <h3 class="seo"> Music Playlist</h3>
-      <a href="musicplaylist.herokuapp.com" class="thumbnail">
-        <img class="img-responsive" src="images/music.png">
-      </a>
-      <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-    </div>
+                            <div>
+                              <h3 class="seo"> Music Playlist</h3>
+                              <a href="musicplaylist.herokuapp.com" class="thumbnail">
+                                <img class="img-responsive" src="images/music.png">
+                              </a>
+                             <p><a class="btn btn-default" href="#" role="button">See Live &raquo;</a>
+                              <a class="btn btn-default" href="#" role="button">Github &raquo;</a></p>
+                            </div>
 
-    <div>
-      <h3 class="seo">Personal Fitness</h3>
-      <a href="personalfitness.herokuapp.com" class="thumbnail">
-        <img class="img-responsive" src="images/personalfitness.png">
-      </a>
-      <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-    </div>
+                            <div>
+                              <h3 class="seo">Personal Fitness</h3>
+                              <a href="personalfitness.herokuapp.com" class="thumbnail">
+                                <img class="img-responsive" src="images/personalfitness.png">
+                              </a>
+                              <p><a class="btn btn-default" href="#" role="button">See Live &raquo;</a>
+                              <a class="btn btn-default" href="#" role="button">Github &raquo;</a></p>
+                            </div>
 
-    <div>
-      <h3 class="seo">SEO/SEM</h3>
-      <a href="meal.html" class="thumbnail">
-        <img class="img-responsive" src="images/bingo.png">
-      </a>
-      <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+                            <div>
+                              <h3 class="seo">BINGO</h3>
+                              <a href="meal.html" class="thumbnail">
+                                <img class="img-responsive" src="images/bingo.png">
+                              </a>
+                              <p><a class="btn btn-default" href="#" role="button">See Live &raquo;</a>
+                              <a class="btn btn-default" href="#" role="button">Github &raquo;</a></p>
+                            </div>
 
-    </div>
+                            <div>
+                              <h3 class="seo">Form Validation</h3>
+                              <a href="http://shkoo25.github.io/angular-form-validation/public/test.html" class="thumbnail" target ="_blank">
+                                <img class="img-responsive" src="images/validation.png">
+                              </a>
+                              <p><a class="btn btn-default" href="#" role="button">See Live &raquo;</a>
+                              <a class="btn btn-default" href="#" role="button">Github &raquo;</a></p>
+                            </div>
 
-    <div>
-      <h3 class="seo">Form Validation</h3>
-      <a href="http://shkoo25.github.io/angular-form-validation/public/test.html" class="thumbnail">
-        <img class="img-responsive" src="images/validation.png">
-      </a>
-      <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-    </div>
+                             <div>
+                              <h3 class="seo"> Clock</h3>
+                              <a href="musicplaylist.herokuapp.com" class="thumbnail">
+                                <img class="img-responsive" src="images/clock.png">
+                              </a>
+                              <p><a class="btn btn-default" href="#" role="button">See Live &raquo;</a>
+                              <a class="btn btn-default" href="#" role="button">Github &raquo;</a></p>
+                            </div>
 
-  </div>
+                          </div>
                     <footer>
 
-                        <div id ="contact"> <!--May use this as well. Contact</div> --> 
-                            <div class = "row2">
-                            <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
-                            Contact
-                          </button>
-                          </div>
+                                <div id ="contact"> <!--May use this as well. Contact</div> --> 
+                                    <div class = "row2">
+                                    <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
+                                    Contact
+                                  </button>
+                                  </div>
 
 <!-- Modal -->
                                 <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
@@ -169,9 +181,7 @@
                                   </div>
                                 </div>
 
-                                <!-- Not decided to use yet.
-                                <div class = "name"> Name </div>
-                                <div class = "phone"> Phone </div> -->
+                            
                             </div>
 
 
