Added a few more projects into portfolio

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title></title>
+  <title>Steve Koo</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -48,7 +48,7 @@
                     <img src ="images/background.png" class = "dc">
     </div>
     <div class="container">
-      <h2>Steve Koo</h2>
+      <h2 id ="about">Steve Koo</h2>
       <div class="lead">Aspiring Developer, Amatuer Golfer, Outdoor Enthusiast</div>
       <div class="col-sm-3">
         <img src="images/me.png" class="img-responsive img-circle">
@@ -149,6 +149,15 @@
                                 <img class="img-responsive" src="images/clock.png">
                               </a>
                               <p><a class="btn btn-default" href="#" role="button">See Live &raquo;</a>
+                              <a class="btn btn-default" href="#" role="button">Github &raquo;</a></p>
+                            </div>
+
+                            <div>
+                              <h3 class="seo"> VIDREV</h3>
+                              <div class="thumbnail">
+                                <img class="img-responsive" src="images/vidrev.png">
+                              </div>
+                              <p><a class="btn btn-default" href="http://shkoo25.github.io/VidRev/public/finalproject.html" role="button" target= "_blank">See Live &raquo;</a>
                               <a class="btn btn-default" href="#" role="button">Github &raquo;</a></p>
                             </div>
 
