Changes to margins

--- a/public/index.html
+++ b/public/index.html
@@ -171,7 +171,7 @@
                                 <div id ="contact"> 
                                     <div class = "row2">
                                     <button type="button" class="btn btn-default btn-lg" data-toggle="modal" data-target="#myModal">
-                                    Contact
+                                    Contact Information
                                   </button>
                                   </div>
 
@@ -181,14 +181,16 @@
                                     <div class="modal-content">
                                       <div class="modal-header">
                                         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                                        <h4 class="modal-title" id="myModalLabel">Modal title</h4>
+                                        <h4 class="modal-title" id="myModalLabel">Contact Information</h4>
                                       </div>
                                       <div class="modal-body">
-                                        ...
+                                        (C)703-217-9840
+                                        <br>
+                                        Email: shkoo25@gmail.com
                                       </div>
                                       <div class="modal-footer">
                                         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                                        <button type="button" class="btn btn-default">Save changes</button>
+                                        <a class="btn btn-default" href="#" role="button" target= "_blank">Resume &raquo;</a></p>
                                       </div>
                                     </div>
                                   </div>
