more changes to styling

--- a/public/index.html
+++ b/public/index.html
@@ -93,32 +93,36 @@
       <div class="row3">
 
 
-        <div id="skills">Skills</div>
-                  <div class="col-lg-3">
+        <div id="skills">Timeline</div>
+                  <div class="col-lg-4">
               <div class="hovereffect">
-                  <img class="img-responsive" src="http://placehold.it/350x200" alt="">
-                  <div class="overlay">
-                     <h2>Hover effect 1</h2>
-                     <a class="info" href="#">link here</a>
+                  <img class="img-responsive" src="images/cap.png" alt="">
+                  <div class="overlay"> 
+                     <h2>Education</h2>
+                      <p> I graduated Radford University with a Bachelors in Business Administration, concentration with Marketing and Economics.</p>
+                      
                   </div>
+                  <div class = "education">Education</div>
               </div>
           </div>
-             <div class="col-lg-3">
+             <div class="col-lg-4">
               <div class="hovereffect">
-                  <img class="img-responsive" src="http://placehold.it/350x200" alt="">
+                  <img class="img-responsive" src="images/sales.png" alt="">
                   <div class="overlay">
-                     <h2>Hover effect 1</h2>
-                     <a class="info" href="#">link here</a>
+                     <h2>Sales</h2>
+                      <p> Working in sales has given me great communication, teamwork, and work ethic skills.  The reason why I highlight those skills is because when working with a group of developers, it's important to interact and understand each other.</p>
                   </div>
+                  <div class = "sales">Sales</div>
               </div>
           </div>
-             <div class="col-lg-3">
+             <div class="col-lg-4">
               <div class="hovereffect">
-                  <img class="img-responsive" src="http://placehold.it/350x200" alt="">
+                  <img class="img-responsive" src="images/coding.png" alt="">
                   <div class="overlay">
-                     <h2>Hover effect 1</h2>
-                     <a class="info" href="#">link here</a>
+                     <h2>Coding</h2>
+                     <p>I give much credit to The Iron Yard for helping me learn Front End Skills using HTML5, CSS3, and Javascript.  I've also learned many frameworks such as Angular, Jquery, Ajax, and Bootstrap.</p>
                   </div>
+                  <div class = "coding">Coding</div>
               </div>
           </div>
         </div>
@@ -167,7 +171,6 @@
 
         <a class="btn btn-default" href="https://github.com/shkoo25/color-clock" role="button" target="_blank">Github &raquo;</a></p>
       </div>
-
 
     </div>
 
