working on projects portion

--- a/public/index.html
+++ b/public/index.html
@@ -42,6 +42,7 @@
           <li><a href="https://twitter.com/stevehkoo"><i class="fa fa-twitter fa-stack-2x"></i></a> </li>
           <li><a href="hhttps://www.facebook.com/steve.koo.14"><i class="fa fa-facebook fa-stack-2x"></i></a> </li>
           <li><a href="https://www.linkedin.com/profile/preview?locale=en_US&trk=prof-0-sb-preview-primary-button"><i class="fa fa-linkedin fa-stack-2x"></i></a> </li>
+          </ul>
       </div>
 
     </div>
@@ -130,6 +131,7 @@
 
     <div id="smooth-scroll"></div>
 
+    
     <div id="projects">Projects</div>
     <div class="slider project-container">
 
@@ -173,6 +175,8 @@
       </div>
 
     </div>
+    </div>
+
 
     <div class="quotes">Quotes
 
