added weather app under projectssection

--- a/public/index.html
+++ b/public/index.html
@@ -138,9 +138,16 @@
         <a href="http://shkoo25.github.io/VidRev/public/finalproject.html" class="thumbnail" target="_.blank">
           <img class="img-responsive" src="images/vidrev.png">
         </a>
-
-
         <a class="btn btn-default" href="https://github.com/shkoo25/VidRev" role="button" target="_blank">Github &raquo;</a></p>
+      </div>
+
+        <div>
+        <h3 class="seo">Weather App</h3>
+        <a href="http://shkoo25.github.io/WeatherWidget/public/index.html" class="thumbnail" target="_blank">
+          <img class="img-responsive" src="images/weather.png">
+        </a>
+        <p>
+          <a class="btn btn-default" href="https://github.com/shkoo25/WeatherWidget" role="button" target="_blank">Github &raquo;</a></p>
       </div>
 
 
